methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:1: error: Missing closing brace `}' assumed here
var vuBiscuit:Boolean = false
^MethodsReturning:1: error: expected class or object definition
var vuBiscuit:Boolean = false
^MethodsReturning:3: error: expected class or object definition
def haveBaggle():Boolean = {
^MethodsReturning:9: error: Missing closing brace `}' assumed here
  recule(6)
  ^