methods.returning.MethodsReturning.scala.code
var vuBiscuit:Boolean = false

def haveBaggle():Boolean = {
  for (c <- 1 to 6) {
    avance()
    if (estSurBiscuit) {
       vuBiscuit=true
    }
  recule(6)
  if (estSurBisuit) {
    vuBiscuit=true
  }
  return vuBiscuit